--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,20 @@ body {
 }
 
 h1 {
-    color: #0D0D0D;
+    text-align: center; 
+    padding: 15px; 
+    
+}
+
+h2 {
+    color: #C4C4C4 ;
 }
 
 p {
     font-size: 24px; 
     padding-top: 10px; 
     padding-left: 10px; 
+    color:  #707070;
 }
 
 img {
@@ -33,4 +40,32 @@ div {
     border-style: solid; 
     border-width: 3px;
     border-color: #FFFFFF; 
+}
+
+.introduction {
+    border-radius: 15px;
+    margin: 15px; 
+    line-height: 2;
+}
+
+.red {
+    background-color: #FF0000;
+    text-align: right;
+    margin-left: 50px;
+}
+
+.blue {
+    background-color: #0000FF;
+    text-align: left;
+    margin-right: 50px;
+    border-right: 5px;
+    border-top: 2px;
+}
+
+.yellow {
+    background-color: #FFFF00;
+    text-align: right;
+    margin-left: 50px;
+    border-bottom: 2px;
+    border-left: 5px;
 }
